<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.firstapp.firstapp.Main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app">

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_font"
            android:text="@string/nome" />
        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_edit"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app">

        <TextView
            android:id="@+id/tvDtnasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_font"
            android:text="@string/dt_nasc" />
        <EditText
            android:id="@+id/etDtnasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_edit"
            android:inputType="numberSigned"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app">

        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_font"
            android:text="@string/sexo"/>
        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margim_padrao_app"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margim_padrao_app"
                android:textSize="@dimen/font_padrao_app"
                android:text="@string/rmasc"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_padrao_app"
                android:text="@string/rfem"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app">

        <TextView
            android:id="@+id/tvCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_font"
            android:text="@string/cpf" />
        <EditText
            android:id="@+id/etCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_edit"
            android:inputType="numberSigned"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_font"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_edit"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app">

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_font"
            android:text="@string/numtele"/>
        <EditText
            android:id="@+id/etTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_padrao_app"
            android:textColor="@color/color_edit"
            android:inputType="numberSigned"/>
    </LinearLayout>
    <Button
        android:id="@+id/btEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margim_padrao_app"
        android:layout_marginRight="@dimen/margim_padrao_app"
        android:layout_marginLeft="@dimen/margim_padrao_app"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_padrao_app"
        android:textColor="@color/color_font"
        android:text="@string/enviar"/>
</LinearLayout>
